[gd_scene load_steps=10 format=3 uid="uid://c67pwvowxcaln"]

[ext_resource type="Script" uid="uid://c7qoxsh18yitn" path="res://gd/sombra_alex.gd" id="1_imci0"]
[ext_resource type="Texture2D" uid="uid://dftvvuy3y1om3" path="res://Assets/Fondo rojo gris.png" id="2_j3xc1"]
[ext_resource type="Texture2D" uid="uid://ctf4y52y1h61e" path="res://Assets/Sombra Alex.png" id="3_c0i6a"]
[ext_resource type="Texture2D" uid="uid://buv5dej0ia122" path="res://Assets/Button.png" id="4_k8qoe"]
[ext_resource type="Texture2D" uid="uid://ddi3fejaksy6i" path="res://Assets/Flecha.png" id="5_7t81m"]
[ext_resource type="FontFile" uid="uid://b30c1fih5l3hh" path="res://fonts/THENIGHTLAMP.ttf" id="6_c0i6a"]
[ext_resource type="AudioStream" uid="uid://q8xjah5rwxef" path="res://music/pasar_encima_button.mp3" id="6_k8qoe"]
[ext_resource type="AudioStream" uid="uid://dchf8xklt234e" path="res://music/Click_Button.mp3" id="7_7t81m"]
[ext_resource type="Texture2D" uid="uid://drf6vfrffm8yr" path="res://Assets/Sombra Alex 2.png" id="10_6w63f"]

[node name="SombraAlex" type="Node2D"]
script = ExtResource("1_imci0")

[node name="FondoRojoGris" type="Sprite2D" parent="."]
position = Vector2(568, 351)
texture = ExtResource("2_j3xc1")

[node name="TextureButtonSiguiente" type="TextureButton" parent="."]
offset_left = 850.0
offset_top = 27.0
offset_right = 1115.0
offset_bottom = 66.0
mouse_default_cursor_shape = 3

[node name="ButtonSiguiente" type="Sprite2D" parent="TextureButtonSiguiente"]
position = Vector2(134, 149)
scale = Vector2(0.289063, 1)
texture = ExtResource("4_k8qoe")

[node name="Flecha2Siguiente" type="Sprite2D" parent="TextureButtonSiguiente"]
position = Vector2(131, 22)
rotation = -3.14159
scale = Vector2(0.240149, 0.128042)
texture = ExtResource("5_7t81m")

[node name="Encima_button" type="AudioStreamPlayer" parent="TextureButtonSiguiente"]
stream = ExtResource("6_k8qoe")
volume_db = -15.928

[node name="Click_Button" type="AudioStreamPlayer" parent="TextureButtonSiguiente"]
stream = ExtResource("7_7t81m")

[node name="TextureButtonAtras" type="TextureButton" parent="."]
offset_left = 41.0
offset_top = 21.0
offset_right = 282.0
offset_bottom = 67.0
mouse_default_cursor_shape = 3

[node name="Button2Atras" type="Sprite2D" parent="TextureButtonAtras"]
position = Vector2(121, 154)
scale = Vector2(0.269531, 1)
texture = ExtResource("4_k8qoe")

[node name="FlechaAtras" type="Sprite2D" parent="TextureButtonAtras"]
position = Vector2(115.5, 21.625)
scale = Vector2(0.230655, 0.132506)
texture = ExtResource("5_7t81m")

[node name="Encima_button" type="AudioStreamPlayer" parent="TextureButtonAtras"]
stream = ExtResource("6_k8qoe")
volume_db = -15.928

[node name="Click_Button" type="AudioStreamPlayer" parent="TextureButtonAtras"]
stream = ExtResource("7_7t81m")

[node name="TextureButtonBack" type="TextureButton" parent="."]
offset_left = 26.0
offset_top = 585.0
offset_right = 277.0
offset_bottom = 625.0
mouse_default_cursor_shape = 3

[node name="Button3Back" type="Sprite2D" parent="TextureButtonBack"]
position = Vector2(125, 149)
scale = Vector2(0.279297, 1)
texture = ExtResource("4_k8qoe")

[node name="LabelBack" type="Label" parent="TextureButtonBack"]
layout_mode = 0
offset_left = 73.0
offset_top = -4.0
offset_right = 178.0
offset_bottom = 48.0
theme_override_fonts/font = ExtResource("6_c0i6a")
theme_override_font_sizes/font_size = 39
text = "BACK"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Encima_button" type="AudioStreamPlayer" parent="TextureButtonBack"]
stream = ExtResource("6_k8qoe")
volume_db = -15.928

[node name="Click_Button" type="AudioStreamPlayer" parent="TextureButtonBack"]
stream = ExtResource("7_7t81m")

[node name="SombraAlex" type="Sprite2D" parent="."]
position = Vector2(473, 332.767)
scale = Vector2(1.11667, 1.11667)
texture = ExtResource("3_c0i6a")

[node name="SombraAlex2" type="Sprite2D" parent="."]
position = Vector2(733, 336.1)
scale = Vector2(1.10833, 1.10833)
texture = ExtResource("10_6w63f")

[connection signal="mouse_entered" from="TextureButtonSiguiente" to="." method="_on_texture_button_siguiente_mouse_entered"]
[connection signal="pressed" from="TextureButtonSiguiente" to="." method="_on_texture_button_siguiente_pressed"]
[connection signal="ready" from="TextureButtonSiguiente/Click_Button" to="." method="_on_click_button_ready"]
[connection signal="mouse_entered" from="TextureButtonAtras" to="." method="_on_texture_button_atras_mouse_entered"]
[connection signal="pressed" from="TextureButtonAtras" to="." method="_on_texture_button_atras_pressed"]
[connection signal="ready" from="TextureButtonAtras/Click_Button" to="." method="_on_click_button_ready"]
[connection signal="mouse_entered" from="TextureButtonBack" to="." method="_on_texture_button_back_mouse_entered"]
[connection signal="pressed" from="TextureButtonBack" to="." method="_on_texture_button_back_pressed"]
[connection signal="ready" from="TextureButtonBack/Click_Button" to="." method="_on_click_button_ready"]
